Fix whitespace style rule

--- a/styles/typography.css
+++ b/styles/typography.css
@@ -484,6 +484,7 @@ code {
 pre code {
   margin: var(--line-height);
   font-size:  var(--smaller);
+  white-space: break-spaces;
 }
 header code, h1 code {
   font-variant-caps: initial;
